package com.directi.training.isp.exercise_refractored;

public interface ISensingDoor {

    void proximityCallback();
}

