package com.directi.training.isp.exercise_refractored;

public interface ITimedDoor {

    void timeOutCallback();
}

